updated settings file

--- a/mine/templates/mine/index.html
+++ b/mine/templates/mine/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -507,7 +509,7 @@ footer p:nth-child(2){
 		<section id="abt" class="about">
 
 			<div class="main">
-				<img src="/static/images/shabah.jpg" />
+				<img src="{% static 'images/shabah.jpg' %}" />
 				<div class="about-text">
 
 					<h2>About Me</h2>
